# riku_chip

./: .gitignore  .gitmodules  2026-04-19-190835-analiza-con-git-el-proyecto-ya-quuero-darle-commi.txt  Cargo.toml  README.md  proyecto_klayout_git_visualizer.md
.cargo/: config.toml
docs/: arquitectura_gds.md  plan.txt
docs/architecture/: rust.md
docs/research/: README.md
docs/research/architecture/: arquitectura_cli_y_orquestacion.md  decisiones_tecnicas.md  experimental_pendientes_y_bugs.md  gdstk_rust_bindings_migracion.md  gdstk_rust_decisiones.md  gotchas_tecnicos.md  gotchas_xschem.md  lenguajes_y_stack.md  metricas_riku.md  metricas_y_benchmarks.md  svg_annotator_coordenadas.md
docs/research/herramientas/: gds_klayout_magic_diff.md  headless_y_compatibilidad_herramientas.md  ngspice_diff_y_versionado.md  xschem_diff_y_ecosistema_eda.md
docs/research/operaciones/: cache_y_rendimiento.md  ci_drc_lvs_regresiones.md  estrategia_merge_archivos_mixtos.md
docs/research/ux/: flujos_reales_y_variaciones.md
gds-renderer/: Cargo.toml  README.md
gds-renderer/src/: compat.rs  composition.rs  gds_diff.rs  hier_walk.rs  lib.rs  output.rs  palette.rs  renderer.rs  scene.rs  style.rs  top_cell.rs  viewer_core_compat.rs  viewport.rs
gds-renderer/tests/fixtures/: datatype_a.gds  datatype_b.gds  gen_datatype_fixture.py  gen_hier_inv.py  gen_top_cell_cases.py  hier_inv_a.gds  hier_inv_b.gds  top_multi.gds  top_nested.gds  top_single.gds
planificacion/: cli_futuro.md  decisiones_tecnicas.md  leeme.txt
research/: README.md  gds_klayout_magic_diff.md  ngspice_diff_y_versionado.md  xschem_diff_y_ecosistema_eda.md
research/arquitectura/: arquitectura_cli_y_orquestacion.md
research/herramientas/: gds_klayout_magic_diff.md  ngspice_diff_y_versionado.md  xschem_diff_y_ecosistema_eda.md
research/operaciones/: cache_y_rendimiento.md  ci_drc_lvs_regresiones.md  estrategia_merge_archivos_mixtos.md
research/ux/: flujos_reales_y_variaciones.md
riku/: Cargo.toml  README.md  cli.py
riku-gui/: Cargo.toml
riku-gui/.cargo/: config.toml
riku-gui/src/: app.rs  launch.rs  main.rs  project.rs  scene_painter.rs  sch_painter.rs
riku/.cargo/: config.toml
riku/adapters/: xschem_driver.py
riku/core/: analyzer.py  git_service.py  svg_annotator.py
riku/docs/: spec-status-log.md
riku/parsers/: xschem.py
riku/src/: cli.rs  lib.rs  main.rs
riku/src/adapters/: gds_driver.rs  mod.rs  registry.rs  xschem_driver.rs
riku/src/cli/: commands.rs  dispatch.rs  doctor.rs  gui.rs  mod.rs  shell.rs
riku/src/cli/format/: diff_json.rs  diff_text.rs  log_json.rs  log_text.rs  mod.rs  status_json.rs  status_text.rs
riku/src/core/: analyzer.rs  diff_view.rs  driver.rs  format.rs  git_service.rs  log.rs  mod.rs  models.rs  path_matcher.rs  pdk.rs  ports.rs  registry.rs  semantic_diff.rs  status.rs  styles.rs  svg_annotator.rs  svg_cache.rs
riku/src/core/analysis/: analyzer.rs  commit_diff.rs  diff_view.rs  envelope.rs  log.rs  mod.rs  status.rs  summary.rs
riku/src/core/analysis/log/: mod.rs  types.rs  walk.rs
riku/src/core/analysis/status/: analyze.rs  mod.rs  types.rs
riku/src/core/domain/: driver.rs  error.rs  mod.rs  models.rs  ports.rs
riku/src/core/git/: git_service.rs
riku/src/core/rendering/: styles.rs  svg_annotator.rs
riku/src/parsers/: mod.rs  xschem.rs
riku/tests/: basic.rs  stress.rs
riku_rust/: Cargo.toml  README.md
riku_rust/src/: cli.rs
tests/: benchmark_speed.py  debug_cache.py  test_analyzer.py  test_git_service.py  test_svg_annotator.py
viewer-core/: Cargo.toml
viewer-core/src/: backend.rs  bbox.rs  element.rs  error.rs  lib.rs  scene.rs  viewport.rs
