[package]
name = "gds-renderer"
version = "0.1.0"
edition = "2024"
description = "SVG renderer for GDS layouts"
license = "MIT"
publish = false

[dependencies]
gdstk-rs = { path = "../external/gdstk/rust" }
viewer-core = { path = "../viewer-core" }
async-trait = "0.1"
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
