[package]
name = "riku-gui"
version = "0.1.0"
edition = "2024"
description = "Desktop GUI for Riku"
license = "MIT"
publish = false

[dependencies]
eframe = { version = "0.34.1", default-features = false, features = ["glow", "x11", "wayland"] }
# gds-renderer = { path = "../gds-renderer" }   # requiere gdstk-rs
# gdstk-rs = { path = "../gdstk/rust" }          # no disponible aún
# Path local: mientras viewer-core no esté publicado en crates.io, la
# dependencia interna de xschem-viewer (`viewer-core` via path relativo)
# solo resuelve cuando ambos repos conviven como hermanos. Cuando
# viewer-core se publique, esto puede volver a apuntar a git/tag.
xschem_viewer = { package = "xschem-viewer", path = "../../xschem-viewer-rust", features = ["viewer-core-compat"] }
riku = { path = "../riku" }
viewer-core = { path = "../viewer-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
poll-promise = { version = "0.3", features = ["tokio"] }
