[package]
name = "riku-gui"
version = "0.1.0"
edition = "2024"
description = "Desktop GUI for Riku"
license = "MIT"
publish = false

[dependencies]
eframe = { version = "0.34.1", default-features = false, features = ["glow", "x11", "wayland"] }
# gds-renderer = { path = "../gds-renderer" }   # requiere gdstk-rs
# gdstk-rs = { path = "../gdstk/rust" }          # no disponible aún
# xschem-viewer-rust vive como submodule git en `external/`. Ver riku/Cargo.toml.
xschem_viewer = { package = "xschem-viewer", path = "../external/xschem-viewer-rust", features = ["viewer-core-compat"] }
riku = { path = "../riku" }
viewer-core = { path = "../viewer-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
poll-promise = { version = "0.3", features = ["tokio"] }
