[package]
name = "riku"
version = "0.1.0"
edition = "2024"
description = "VCS semantico para diseno de chips"
authors = ["euler <carlos.cuevaleon@gmail.com>", "Adriel2503 <Adriel2503@users.noreply.github.com>"]
license = "MIT"
default-run = "riku"

[lib]
name = "riku"
path = "src/lib.rs"

[[bin]]
name = "riku"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
git2 = "0.20.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
which = "8.0.2"
xschem_viewer = { git = "https://github.com/carloscl03/xschem-viewer-rust", subdir = "rust" }

[dev-dependencies]
tempfile = "3.27.0"
