[package]
name = "riku"
version = "0.1.0"
edition = "2024"
description = "VCS semantico para diseno de chips"
authors = ["euler <carlos.cuevaleon@gmail.com>", "Adriel2503 <Adriel2503@users.noreply.github.com>"]
license = "MIT"
default-run = "riku"

[lib]
name = "riku"
path = "src/lib.rs"

[[bin]]
name = "riku"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
git2 = "0.20.4"
glob = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
rustyline = "14.0"
# xschem-viewer-rust vive como submodule git en `external/`. Esto permite
# `git clone --recurse-submodules` y compilar sin pasos extra. Al publicar
# viewer-core en crates.io, esto puede migrarse a una git/crates dependency.
xschem_viewer = { package = "xschem-viewer", path = "../external/xschem-viewer-rust" }

[dev-dependencies]
tempfile = "3.27.0"
