[package]
name = "riku-rust"
version = "0.1.0"
edition = "2024"
description = "VCS semantico para diseno de chips"
authors = ["Ariel Amado Frias Rojas"]
license = "MIT"
default-run = "riku"

[lib]
name = "riku_rust"
path = "src/lib.rs"

[[bin]]
name = "riku"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
git2 = "0.20.4"
once_cell = "1.21.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
which = "8.0.2"

[dev-dependencies]
tempfile = "3.27.0"
