[package]
name = "viewer-core"
version = "0.1.0"
edition = "2021"
description = "Abstracciones neutras para visores de layout/esquemático (Xschem, GDS, ...)"
license = "MIT"

[dependencies]
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
